[gd_scene load_steps=7 format=3 uid="uid://fyjb02e133dq"]

[ext_resource type="Script" path="res://Mercat/eines.gd" id="1_asfbd"]
[ext_resource type="Texture2D" uid="uid://htjjbbs8sx57" path="res://Textures/Pixaxe.png" id="2_6qbcw"]
[ext_resource type="Texture2D" uid="uid://c1rhffggn1iwy" path="res://Textures/Axe1.png" id="3_j7iq7"]
[ext_resource type="Texture2D" uid="uid://bqqvh5x5coe81" path="res://Textures/Accoin1.png" id="4_8573c"]
[ext_resource type="Texture2D" uid="uid://xtfofat07xhf" path="res://Textures/Inv.png" id="5_aclab"]
[ext_resource type="Texture2D" uid="uid://fsqp13ju6xg7" path="res://Textures/Inv_Hover.png" id="6_w88eg"]

[node name="Eines" type="Node"]
script = ExtResource("1_asfbd")

[node name="Pic" type="CanvasGroup" parent="."]

[node name="Upgrade" type="Button" parent="Pic"]
offset_left = 85.0
offset_top = 294.0
offset_right = 206.0
offset_bottom = 344.0
theme_override_font_sizes/font_size = 30
text = "Millorar"

[node name="lvl" type="Label" parent="Pic"]
offset_left = 95.0
offset_top = 364.0
offset_right = 200.0
offset_bottom = 390.0
text = "Tier: "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="pice" type="Label" parent="Pic"]
offset_left = 47.0
offset_top = 251.0
offset_right = 246.0
offset_bottom = 277.0
text = "Accoins: 9999999999000"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Picaxe" type="Sprite2D" parent="Pic"]
texture_filter = 1
position = Vector2(150, 207)
scale = Vector2(2.90625, 2.99268)
texture = ExtResource("2_6qbcw")

[node name="Axe" type="CanvasGroup" parent="."]
position = Vector2(217, -1)

[node name="Upgrade" type="Button" parent="Axe"]
offset_left = 85.0
offset_top = 294.0
offset_right = 206.0
offset_bottom = 344.0
theme_override_font_sizes/font_size = 30
text = "Millorar"

[node name="lvl" type="Label" parent="Axe"]
offset_left = 95.0
offset_top = 364.0
offset_right = 200.0
offset_bottom = 390.0
text = "Tier: "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="pice" type="Label" parent="Axe"]
offset_left = 51.0
offset_top = 252.0
offset_right = 242.0
offset_bottom = 278.0
text = "Accoins: 9999999999000"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Picaxe" type="Sprite2D" parent="Axe"]
texture_filter = 1
position = Vector2(150, 207)
scale = Vector2(2.90625, 2.99268)
texture = ExtResource("3_j7iq7")

[node name="Exit" type="Button" parent="."]
offset_left = 28.0
offset_top = 27.0
offset_right = 183.0
offset_bottom = 118.0
size_flags_horizontal = 6
auto_translate = false
theme_override_font_sizes/font_size = 60
text = "Sortida"

[node name="Accoins" type="CanvasGroup" parent="."]

[node name="Coins" type="Sprite2D" parent="Accoins"]
texture_filter = 1
position = Vector2(1087, 52)
scale = Vector2(2.25, 2.25)
texture = ExtResource("4_8573c")

[node name="Accoins" type="Label" parent="Accoins"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 915.0
offset_top = 27.0
offset_right = 1033.0
offset_bottom = 72.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 2
vertical_alignment = 1

[node name="Inv" type="TextureButton" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.276
anchor_top = 0.11
anchor_right = 0.276
anchor_bottom = 0.11
offset_left = -43.952
offset_top = -44.28
offset_right = 44.048
offset_bottom = 43.72
texture_normal = ExtResource("5_aclab")
texture_hover = ExtResource("6_w88eg")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="Pic/Upgrade" to="." method="_on_pic_upgrade_pressed"]
[connection signal="pressed" from="Axe/Upgrade" to="." method="_on_axe_upgrade_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Inv" to="." method="_on_inv_pressed"]
